syntax = "proto3";

package posty_v1;

import "google/protobuf/timestamp.proto";

import "google/api/annotations.proto";

option go_package = "service/pkg/grpc/posty_v1";

message Post {
  int64 id = 1;
  string title = 2;
  string image = 3;
  int64 creator_id = 4;
  google.protobuf.Timestamp created_at = 5;
}

message Comment {
  int64 id = 1;
  int64 post_id = 2;
  string comment = 3;
  int64 creator_id = 4;
  google.protobuf.Timestamp created_at = 5;
}

service PostyService {
  rpc CreatePost(CreatePostRequest) returns (Post){
    option (google.api.http) = {
      post: "/v1/posts"
      body: "*"
    };
  };
  rpc GetPost(GetPostRequest) returns (Post){
    option (google.api.http) = {
      get: "/v1/posts/{id}"
    };
  };
  rpc GetAllPosts(GetAllPostsRequest) returns (GetAllPostsResponse){
    option (google.api.http) = {
      get: "/v1/posts"
    };
  };
  rpc CommentPost(CommentPostRequest) returns (Comment){
    option (google.api.http) = {
      post: "/v1/posts/{postId}/comments"
      body: "*"
    };
  }
  rpc GetAllComments(GetAllCommentsRequest) returns (GetAllCommentsResponse){
    option (google.api.http) = {
      get: "/v1/posts/{postId}/comments"
    };
  };
}

//Requests

message GetAllCommentsRequest {
  int64 postId = 1;
  int64 cursor = 2;
  int64 limit = 3;
}

message CommentPostRequest {
  int64 postId = 1;
  string comment = 2;
}

message CreatePostRequest {
  string title = 1;
  string image = 2;
}

message GetPostRequest {
  int64 id = 1;
}

message GetAllPostsRequest {
  int64 cursor = 1;
  int64 limit = 2;
}

//Responses
message GetAllCommentsResponse {
  repeated Comment comments = 1;
}

message GetAllPostsResponse {
  repeated Post posts = 1;
}
